kubernetes/templates/httproute/external/httproute-customheaders.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "${APP}-with-headers"
  namespace: ${NAMESPACE:default}
  labels:
    app.kubernetes.io/name: ${APP}
    app.kubernetes.io/component: routing
  annotations:
    external-dns.alpha.kubernetes.io/target: "${SUBDOMAIN}.dcunha.io"
spec:
  hostnames:
    - "${SUBDOMAIN}.dcunha.io"
  parentRefs:
    - name: external-gateway
      namespace: default
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Custom-Header
                value: ${CUSTOM_HEADER_VALUE}
            set:
              - name: X-Forwarded-Proto
                value: https
      backendRefs:
        - name: ${APP}
          kind: Service
          namespace: ${NAMESPACE:default}
          port: ${ACCESS_PORT}
          weight: 1
