kubernetes/templates/httproute/external/httproute-external-rewrite.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "${APP}-external-rewrite"
  namespace: ${NAMESPACE:default}
  labels:
    app.kubernetes.io/name: ${APP}
    app.kubernetes.io/component: routing
  annotations:
    external-dns.alpha.kubernetes.io/target: "${SUBDOMAIN}.dcunha.io"
spec:
  hostnames:
    - "${SUBDOMAIN}.dcunha.io"
  parentRefs:
    - name: external-gateway
      namespace: default
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: ${PATH_PREFIX:/}
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: ${REWRITE_PATH:/}
      backendRefs:
        - name: ${APP}
          kind: Service
          namespace: ${NAMESPACE:default}
          port: ${ACCESS_PORT}
          weight: 1
