kubernetes/templates/httproute/external/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "${APP}-external"
  namespace: ${NAMESPACE:default}
  annotations:
    external-dns.alpha.kubernetes.io/target: "${SUBDOMAIN}.dcunha.io"
spec:
  hostnames:
    - "${SUBDOMAIN}.dcunha.io"
  parentRefs:
    - name: external-gateway
      namespace: default
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ${APP}
          kind: Service
          namespace: ${NAMESPACE:default}
          port: ${ACCESS_PORT}
